        particular directories from being searched.

      - Added a new API for collating text.  You can now adapt
        a locale to ``zope.i18n.interfaces.ILocales.ICollator``.  You can
        then use that to sort strings, such as menu entries, in a
        locale-specific fashion.

    Restructuring

      - Removed unused menus and made previous titles, the description,
	since they were awefully long. Then I created new, short titles.

    Bug Fixes

      - Fixed storage bug reported, fixed and tested by Zhiyun (Simon) Hang.

      - Fixed a Gadfly DB Adapter bug that was reported, fixed and tested by
        Tadashi Matsumoto.

      - ``zope.app.content_types`` is now the package
        ``zope.app.contenttypes`` (code backported from Zope 2)

      - Fixed a bug in the ``<viewlet>`` directive handler: extra string
        attributes were ignored if you didn't explicitly specify a
        class for the viewlet.

      - Fixed issue 497: HTTP DELETE now returns 405 Method Not Allowed
        when the container cannot be adapted to IWriteDirectory.

    Much thanks to everyone who contributed to this release:

      Jim Fulton, Marius Gedminas, Brian Sutherland, Stephan Richter, Dimitry
      Vasiliev, Tim Peters, Zachery Bir, Gary Poster, Egon Frerich, Zhiyun
      (Simon) Hang, Tadashi Matsumoto, Simon Michael, Encople Degoute

  ------------------------------------------------------------------

  Zope 3.2.0b3

      - The test-runner --coverage option didn't work when tested code
        was installed in Python's site-packages, which is the case for
        Zope 3 on windows.

      - Input buffering failed and caused Zope to hang when uploading
        large files and using the Twisted server.

      - Make zopetest insert rather than append the library path
        (fix spurious test failures from packages in site-packages)

  Zope 3.2.0b2

    New features

      - Added an option to mkzopeinstance to create instances that use