@@ -11,49 +11,18 @@
 # FOR A PARTICULAR PURPOSE.
 #
 ##############################################################################
-"""This is an 'abstract' test for the ITranslationDomain interface.
+"""Tests for zope.i18n.interpolate.
 
 $Id$
 """
 import unittest
-from zope.i18n import interpolate
 
+from zope.testing import doctest
 
-class TestInterpolation(unittest.TestCase):
-
-    def testInterpolation(self):
-        mapping = {'name': 'Zope', 'version': '3x', 'number': 3}
-        # Test simple interpolations
-        self.assertEqual(
-            interpolate('This is $name.', mapping), 'This is Zope.')
-        self.assertEqual(
-            interpolate('This is ${name}.', mapping), 'This is Zope.')
-        # Test more than one interpolation variable
-        self.assertEqual(
-            interpolate('This is $name version $version.', mapping),
-            'This is Zope version 3x.')
-        self.assertEqual(
-            interpolate('This is ${name} version $version.', mapping),
-            'This is Zope version 3x.')
-        self.assertEqual(
-            interpolate('This is $name version ${version}.', mapping),
-            'This is Zope version 3x.')
-        self.assertEqual(
-            interpolate('This is ${name} version ${version}.', mapping),
-            'This is Zope version 3x.')
-        # Test escaping the $
-        self.assertEqual(
-            interpolate('This is $$name.', mapping), 'This is $$name.')
-        self.assertEqual(
-            interpolate('This is $${name}.', mapping), 'This is $${name}.')
-        # Test interpolation of non-string objects
-        self.assertEqual(interpolate('Number $number.', mapping), 'Number 3.')
-        
 
 def test_suite():
-    return unittest.TestSuite((
-        unittest.makeSuite(TestInterpolation),
-        ))
+    return doctest.DocTestSuite("zope.i18n")
+
 
 if __name__=='__main__':
     unittest.TextTestRunner().run(test_suite())
